Basic frontend skeleton established

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Unite-Pro",
-  "name": "Unite-Pro",
+  "short_name": "UTA Predictions",
+  "name": "UTA Prediction Maker",
   "icons": [
     {
       "src": "favicon.ico",
