--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "express-session": "^1.18.1",
     "memorystore": "^1.6.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
